Formalize content shift fix

--- a/apps/browse/index.styl
+++ b/apps/browse/index.styl
@@ -22,8 +22,7 @@
   transition opacity 0.3s
   vertical-align bottom
   width 100%
-  // Hack to prevent shifting content opacity fade
-  transform translateZ(0)
+  prevent-content-shift()
 
 .bfg-title
   position absolute
